--- a/hw1.ipynb
+++ b/hw1.ipynb
@@ -2,11 +2,31 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    },
+    {
+     "ename": "ImportError",
+     "evalue": "No module named pyspark",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-5-92206d77dcf2>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mfindspark\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mpyspark\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mpyspark\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msql\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfunctions\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0msqlFunctions\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;31m# import matplotlib.pyplot as plt\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mImportError\u001b[0m: No module named pyspark"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -33,7 +53,19 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'CriteoDataSets' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-2-e238091520fb>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mCriteoDataSets\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mconfig\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mSPARK_CONTEXT\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mconfig\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mSPARK_SQL_CONTEXT\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mtrain\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtrain\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mconfig\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mDEBUG\u001b[0m \u001b[0;32melse\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdebug\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mtrain_5m\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtrain_5m\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mconfig\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mDEBUG\u001b[0m \u001b[0;32melse\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdebug\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'CriteoDataSets' is not defined"
+     ]
+    }
+   ],
    "source": [
     "data = CriteoDataSets(config.SPARK_CONTEXT, config.SPARK_SQL_CONTEXT)\n",
     "train = data.train if not config.DEBUG else data.debug\n",
@@ -48,14 +80,15 @@
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "([0, 1, 2], [77337, 22663])"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'config' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-3-c428e38fdc0d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Label data histogram\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32mif\u001b[0m \u001b[0mconfig\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mDEBUG\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m     \u001b[0msummary\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlabel_histogram\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrain\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'config' is not defined"
+     ]
     }
    ],
    "source": [
@@ -72,308 +105,14 @@
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Column 2:\n",
-      "\n",
-      "          0.000 - 56: 55,236\n",
-      "\n",
-      "        55.600 - 111: 295\n",
-      "\n",
-      "       111.200 - 167: 34\n",
-      "\n",
-      "       166.800 - 222: 10\n",
-      "\n",
-      "       222.400 - 278: 5\n",
-      "\n",
-      "       278.000 - 334: 3\n",
-      "\n",
-      "       333.600 - 389: 2\n",
-      "\n",
-      "       389.200 - 445: 0\n",
-      "\n",
-      "       444.800 - 500: 1\n",
-      "\n",
-      "       500.400 - 556: 1\n",
-      "\n",
-      "\n",
-      "Column 3:\n",
-      "\n",
-      "      -2.000 - 1,850: 98,530\n",
-      "\n",
-      "   1,850.400 - 3,703: 1,397\n",
-      "\n",
-      "   3,702.800 - 5,555: 52\n",
-      "\n",
-      "   5,555.200 - 7,408: 12\n",
-      "\n",
-      "   7,407.600 - 9,260: 7\n",
-      "\n",
-      "  9,260.000 - 11,112: 0\n",
-      "\n",
-      " 11,112.400 - 12,965: 1\n",
-      "\n",
-      " 12,964.800 - 14,817: 0\n",
-      "\n",
-      " 14,817.200 - 16,670: 0\n",
-      "\n",
-      " 16,669.600 - 18,522: 1\n",
-      "\n",
-      "\n",
-      "Column 4:\n",
-      "\n",
-      "       0.000 - 6,554: 80,863\n",
-      "\n",
-      "  6,553.500 - 13,107: 11\n",
-      "\n",
-      " 13,107.000 - 19,660: 1\n",
-      "\n",
-      " 19,660.500 - 26,214: 20\n",
-      "\n",
-      " 26,214.000 - 32,768: 0\n",
-      "\n",
-      " 32,767.500 - 39,321: 0\n",
-      "\n",
-      " 39,321.000 - 45,874: 0\n",
-      "\n",
-      " 45,874.500 - 52,428: 0\n",
-      "\n",
-      " 52,428.000 - 58,982: 1\n",
-      "\n",
-      " 58,981.500 - 65,535: 2\n",
-      "\n",
-      "\n",
-      "Column 5:\n",
-      "\n",
-      "          0.000 - 42: 79,210\n",
-      "\n",
-      "         41.700 - 83: 1,178\n",
-      "\n",
-      "        83.400 - 125: 44\n",
-      "\n",
-      "       125.100 - 167: 8\n",
-      "\n",
-      "       166.800 - 208: 12\n",
-      "\n",
-      "       208.500 - 250: 6\n",
-      "\n",
-      "       250.200 - 292: 5\n",
-      "\n",
-      "       291.900 - 334: 0\n",
-      "\n",
-      "       333.600 - 375: 0\n",
-      "\n",
-      "       375.300 - 417: 3\n",
-      "\n",
-      "\n",
-      "Column 6:\n",
-      "\n",
-      "     0.000 - 174,113: 93,216\n",
-      "\n",
-      "174,112.800 - 348,226: 1,145\n",
-      "\n",
-      "348,225.600 - 522,338: 491\n",
-      "\n",
-      "522,338.400 - 696,451: 218\n",
-      "\n",
-      "696,451.200 - 870,564: 88\n",
-      "\n",
-      "870,564.000 - 1,044,677: 44\n",
-      "\n",
-      "1,044,676.800 - 1,218,790: 19\n",
-      "\n",
-      "1,218,789.600 - 1,392,902: 11\n",
-      "\n",
-      "1,392,902.400 - 1,567,015: 5\n",
-      "\n",
-      "1,567,015.200 - 1,741,128: 3\n",
-      "\n",
-      "\n",
-      "Column 7:\n",
-      "\n",
-      "       0.000 - 1,629: 74,200\n",
-      "\n",
-      "   1,629.000 - 3,258: 536\n",
-      "\n",
-      "   3,258.000 - 4,887: 92\n",
-      "\n",
-      "   4,887.000 - 6,516: 36\n",
-      "\n",
-      "   6,516.000 - 8,145: 12\n",
-      "\n",
-      "   8,145.000 - 9,774: 10\n",
-      "\n",
-      "  9,774.000 - 11,403: 3\n",
-      "\n",
-      " 11,403.000 - 13,032: 1\n",
-      "\n",
-      " 13,032.000 - 14,661: 1\n",
-      "\n",
-      " 14,661.000 - 16,290: 2\n",
-      "\n",
-      "\n",
-      "Column 8:\n",
-      "\n",
-      "         0.000 - 881: 95,218\n",
-      "\n",
-      "     880.700 - 1,761: 51\n",
-      "\n",
-      "   1,761.400 - 2,642: 8\n",
-      "\n",
-      "   2,642.100 - 3,523: 2\n",
-      "\n",
-      "   3,522.800 - 4,404: 0\n",
-      "\n",
-      "   4,403.500 - 5,284: 0\n",
-      "\n",
-      "   5,284.200 - 6,165: 1\n",
-      "\n",
-      "   6,164.900 - 7,046: 0\n",
-      "\n",
-      "   7,045.600 - 7,926: 0\n",
-      "\n",
-      "   7,926.300 - 8,807: 1\n",
-      "\n",
-      "\n",
-      "Column 9:\n",
-      "\n",
-      "         0.000 - 468: 99,864\n",
-      "\n",
-      "       467.700 - 935: 11\n",
-      "\n",
-      "     935.400 - 1,403: 0\n",
-      "\n",
-      "   1,403.100 - 1,871: 0\n",
-      "\n",
-      "   1,870.800 - 2,338: 4\n",
-      "\n",
-      "   2,338.500 - 2,806: 4\n",
-      "\n",
-      "   2,806.200 - 3,274: 3\n",
-      "\n",
-      "   3,273.900 - 3,742: 1\n",
-      "\n",
-      "   3,741.600 - 4,209: 3\n",
-      "\n",
-      "   4,209.300 - 4,677: 3\n",
-      "\n",
-      "\n",
-      "Column 10:\n",
-      "\n",
-      "       0.000 - 1,266: 94,344\n",
-      "\n",
-      "   1,266.100 - 2,532: 735\n",
-      "\n",
-      "   2,532.200 - 3,798: 144\n",
-      "\n",
-      "   3,798.300 - 5,064: 30\n",
-      "\n",
-      "   5,064.400 - 6,330: 12\n",
-      "\n",
-      "   6,330.500 - 7,597: 13\n",
-      "\n",
-      "   7,596.600 - 8,863: 1\n",
-      "\n",
-      "  8,862.700 - 10,129: 1\n",
-      "\n",
-      " 10,128.800 - 11,395: 0\n",
-      "\n",
-      " 11,394.900 - 12,661: 1\n",
-      "\n",
-      "\n",
-      "Column 11:\n",
-      "\n",
-      "           0.000 - 1: 26,171\n",
-      "\n",
-      "           0.600 - 1: 25,277\n",
-      "\n",
-      "           1.200 - 2: 0\n",
-      "\n",
-      "           1.800 - 2: 3,409\n",
-      "\n",
-      "           2.400 - 3: 0\n",
-      "\n",
-      "           3.000 - 4: 580\n",
-      "\n",
-      "           3.600 - 4: 119\n",
-      "\n",
-      "           4.200 - 5: 0\n",
-      "\n",
-      "           4.800 - 5: 27\n",
-      "\n",
-      "           5.400 - 6: 4\n",
-      "\n",
-      "\n",
-      "Column 12:\n",
-      "\n",
-      "          0.000 - 10: 91,416\n",
-      "\n",
-      "         10.400 - 21: 2,696\n",
-      "\n",
-      "         20.800 - 31: 765\n",
-      "\n",
-      "         31.200 - 42: 203\n",
-      "\n",
-      "         41.600 - 52: 82\n",
-      "\n",
-      "         52.000 - 62: 68\n",
-      "\n",
-      "         62.400 - 73: 26\n",
-      "\n",
-      "         72.800 - 83: 15\n",
-      "\n",
-      "         83.200 - 94: 4\n",
-      "\n",
-      "        93.600 - 104: 6\n",
-      "\n",
-      "\n",
-      "Column 13:\n",
-      "\n",
-      "          0.000 - 49: 22,793\n",
-      "\n",
-      "         49.300 - 99: 21\n",
-      "\n",
-      "        98.600 - 148: 3\n",
-      "\n",
-      "       147.900 - 197: 2\n",
-      "\n",
-      "       197.200 - 246: 0\n",
-      "\n",
-      "       246.500 - 296: 0\n",
-      "\n",
-      "       295.800 - 345: 0\n",
-      "\n",
-      "       345.100 - 394: 0\n",
-      "\n",
-      "       394.400 - 444: 0\n",
-      "\n",
-      "       443.700 - 493: 1\n",
-      "\n",
-      "\n",
-      "Column 14:\n",
-      "\n",
-      "         0.000 - 656: 80,441\n",
-      "\n",
-      "     655.800 - 1,312: 6\n",
-      "\n",
-      "   1,311.600 - 1,967: 5\n",
-      "\n",
-      "   1,967.400 - 2,623: 5\n",
-      "\n",
-      "   2,623.200 - 3,279: 3\n",
-      "\n",
-      "   3,279.000 - 3,935: 2\n",
-      "\n",
-      "   3,934.800 - 4,591: 3\n",
-      "\n",
-      "   4,590.600 - 5,246: 0\n",
-      "\n",
-      "   5,246.400 - 5,902: 0\n",
-      "\n",
-      "   5,902.200 - 6,558: 1\n",
-      "\n",
-      "\n"
+     "ename": "NameError",
+     "evalue": "name 'summary' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-4-822c9e0d7adb>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0;32mfor\u001b[0m \u001b[0mcol_num\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mhistogram\u001b[0m \u001b[0;32min\u001b[0m \u001b[0msummary\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mint_columns_histograms_iter\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrain\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m     \u001b[0mbins\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcounts\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mhistogram\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m     \u001b[0;32mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Column %d:\\n\"\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0mcol_num\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'summary' is not defined"
      ]
     }
    ],
@@ -1104,8 +843,7 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {
-    "collapsed": false,
-    "scrolled": true
+    "collapsed": true
    },
    "outputs": [
     {
